<resources>
    <string name="app_name">NewsWorld</string>
    <string name="powered_by">powered by</string>

    <!-- Drawer Menu Items -->
    <string name="menu_all_news">All news</string>
    <string name="menu_artanddesign">Art &amp; Design</string>
    <string name="menu_books">Books</string>
    <string name="menu_business">Business</string>
    <string name="menu_culture">Culture</string>
    <string name="menu_education">Education</string>
    <string name="menu_environment">Environment</string>
    <string name="menu_fashion">Fashion</string>
    <string name="menu_film">Film</string>
    <string name="menu_football">Football</string>
    <string name="menu_games">Games</string>
    <string name="menu_life_style">Life &amp; Style</string>
    <string name="menu_money">Money</string>
    <string name="menu_music">Music</string>
    <string name="menu_commentisfree">Opinion</string>
    <string name="menu_politics">Politics</string>
    <string name="menu_science">Science</string>
    <string name="menu_society">Society</string>
    <string name="menu_sport">Sport</string>
    <string name="menu_stage">Stage</string>
    <string name="menu_technology">Technology</string>
    <string name="menu_travel">Travel</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_world">World</string>

    <!-- API Section Ids -->
    <string name="section_id_all_news" translatable="false">all_news</string>
    <string name="section_id_artanddesign" translatable="false">artanddesign</string>
    <string name="section_id_books" translatable="false">books</string>
    <string name="section_id_business" translatable="false">business</string>
    <string name="section_id_culture" translatable="false">culture</string>
    <string name="section_id_education" translatable="false">education</string>
    <string name="section_id_environment" translatable="false">environment</string>
    <string name="section_id_fashion" translatable="false">fashion</string>
    <string name="section_id_film" translatable="false">film</string>
    <string name="section_id_football" translatable="false">football</string>
    <string name="section_id_games" translatable="false">games</string>
    <string name="section_id_life_style" translatable="false">lifeandstyle</string>
    <string name="section_id_money" translatable="false">money</string>
    <string name="section_id_music" translatable="false">music</string>
    <string name="section_id_commentisfree" translatable="false">commentisfree</string>
    <string name="section_id_politics" translatable="false">politics</string>
    <string name="section_id_science" translatable="false">science</string>
    <string name="section_id_society" translatable="false">society</string>
    <string name="section_id_sport" translatable="false">sport</string>
    <string name="section_id_stage" translatable="false">stage</string>
    <string name="section_id_technology" translatable="false">technology</string>
    <string name="section_id_travel" translatable="false">travel</string>
    <string name="section_id_weather" translatable="false">weather</string>
    <string name="section_id_world" translatable="false">world</string>

    <!-- Placeholders -->
    <string name="placeholder_list_item_title">Ferrari present their new Formula 1 car. The
    driver line up will be the same as last year\'s, with former champions Sebastian Vettel
        and Kimi Raikkonen at the wheel!</string>
    <string name="placeholder_list_item_section">Sports</string>
    <string name="placeholder_list_item_date">08/02/2018</string>
    <string name="placeholder_list_item_time">18:48</string>

    <!-- Menu -->
    <string name="menu_search">Search…</string>
    <string name="menu_settings">Settings</string>

    <!-- Settings -->
    <string name="prefs_sync_title">Sync settings</string>
    <string name="prefs_sync_sum">Edit the synchronization and notification settings</string>

    <string name="prefs_check_sync_key">check_sync</string>
    <string name="prefs_check_sync_title">Enable Sync</string>
    <string name="prefs_check_sync_sum">Enable regular synchronization of news</string>

    <string name="prefs_sync_interval_key">sync_interval</string>
    <string name="prefs_sync_interval_title">Sync every</string>

    <string name="prefs_notification_key">notification</string>
    <string name="prefs_notification_title">Notifications</string>
    <string name="prefs_notification_sum">Notify when news are synced</string>

    <string name="prefs_drawer_key">drawer</string>
    <string name="prefs_drawer_title">News Sections</string>
    <string name="prefs_drawer_dialog_title">Select News Sections</string>
    <string name="prefs_drawer_sum">Select which News Sections will be available</string>
</resources>
