<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_business"
        android:title="@string/menu_business"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_culture"
        android:title="@string/menu_culture"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_environment"
        android:title="@string/menu_environment"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_lifeandstyle"
        android:title="@string/menu_life_style"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_politics"
        android:title="@string/menu_politics"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_science"
        android:title="@string/menu_science"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_sport"
        android:title="@string/menu_sport"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_travel"
        android:title="@string/menu_travel"
        app:showAsAction="ifRoom|withText"/>
</menu>